[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encrypt-tool"
version = "1.0.0"
description = "A simple AES encryption/decryption CLI tool"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Logan Hammond", email="lhammond997@gmail.com" }
]
dependencies = [
  "pycryptodomex"
]

[project.scripts]
encrypt-tool = "encrypt_tool.main:cli"